# siwp2005-rafaelfernando-sort

./: LICENSE  README.md  setup.cfg
src/siwp2005_rafaelfernando_sort.egg-info/: PKG-INFO  SOURCES.txt
src/sort/: __init__.py
tests/: test_bubble_sort.py  test_insertion_sort.py  test_quick_sort.py
