[metadata]
name = siwp2005-rafaelfernando-sort
version = 0.1.2
author = Rafael Fernando
author_email = rafaelfernando.ukkw@gmail.com
description = A collection of sorting algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rfrnd/siwp2005-rafaelfernando-sort
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src